@@ -1,3 +1,13 @@
+2006-08-25  Janis Johnson  <janis187@us.ibm.com>
+
+	Backport from mainline (r108133)
+	2005-12-07  Jon Grimm  <jgrimm2@us.ibm.com>
+	    Ben Elliston  <bje@au.ibm.com>
+	* include/cpplib.h (CPP_N_DFLOAT): New.
+	* expr.c (interpret_float_suffix): Identify df, dd, and dl
+	suffixes as decimal floating point constants.
+	(cpp_classify_number): Disallow hexadecimal DFP constants.
+
 2006-05-24  Release Manager
 
 	* GCC 4.1.1 released.
